fixtures/vyper/simple/overflow/positive/i248-0.3.vy
#! {
#!   "modes": [
#!     "V 0.3.9",
#!     "V 0.3.10"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "226156424291633194186662080095093570025917938800079226639565593765455331327"
#!           ],
#!           "caller": "0x949Fc20DBFbe4bf0bc9c587a8e9FE3f5B310c8D8"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int248) -> int248:
    return witness + 1
